syntax = "proto3";
option go_package = ".;pb";

/// 市场新闻
message DBRealTimeGlobalNews {
	string title     =1;                //@go_tags(`gorm:"title" json:"title"`) 标题
	string content     =2;              //@go_tags(`gorm:"content" json:"content"`) 内容
	string publish_time     =3;         //@go_tags(`gorm:"publish_time" json:"publish_time"`) 发布时间
	string url     =4;                  //@go_tags(`gorm:"url" json:"url"`) 链接
}